--- a/paper/dotaligner.bib
+++ b/paper/dotaligner.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Martin Smith at 2017-09-23 01:16:52 +1000 
+%% Created for Martin Smith at 2017-11-25 21:34:08 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{smit2010repeatmodeler,
+	Author = {Smit, AFA and Hubley, R},
+	Date-Added = {2017-11-25 10:34:06 +0000},
+	Date-Modified = {2017-11-25 10:34:06 +0000},
+	Journal = {Repeat Masker Website},
+	Title = {RepeatModeler Open-1.0},
+	Year = {2010}}
 
 @article{gong2011lncrnas,
 	Author = {Gong, Chenguang and Maquat, Lynne E},
